--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File          : cix-main.org
 # Created       : Sat 07 Nov 2015 22:58:38
-# Last Modified : <2016-11-21 Mon 21:32:08 GMT> sharlatan
+# Last Modified : <2016-11-23 Wed 23:38:47 GMT> sharlatan
 # Maintainer    : sharlatan <sharlatanus@gmail.com>
 # Short         :
 
@@ -73,7 +73,7 @@ on *GNU/Linux*
 : <package-name><link><description>
 
 - *Legacy* /Keep the history/
-  + [[./spices/cix-hall_of_fame.org][Hall of Fame]] :: Who made it posible!
+  + [[./spices/cix-hall-of-fame.org][Hall of Fame]] :: Who made it posible!
   + [[./spices/cix-unix_land.org][UNIX Land]] :: Common UNIX commands.
 
 - *Core* /Usually it contains on the most distributions/
@@ -85,14 +85,14 @@ on *GNU/Linux*
        utilities.
 
 - *File* /Everything is a file/!
+  + [[file:./spices/cix-diffutils.org][diffutils]] :: A GNU collection of diff utilities
   + [[./spices/cix-emacs.org][emacs]] :: GNU Emacs text editor
   + [[./spices/cix-gawk.org][gawk]] :: The GNU version of the awk text processing utility
   + [[./spices/cix-lsof.org][lsof]] :: A utility which lists open files on a Linux/UNIX system
   + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
   + [[./spices/cix-nano.org][nano]] :: A small text editor
-  + [[./spices/cix-sed.org][sed/ed]] :: A GNU stream text editor
-  + [[./spices/cix-vim.org][vim-enchanced]] :: recent enhancements of vim
-  + [[file:./spices/cix-diffutils.org][diffutils]] :: A GNU collection of diff utilities
+  + [[./spices/cix-sed.org][sed]] :: A GNU stream text editor
+  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim
 
 - *Filesystem* /Partition file system craft and check/
   + [[./spices/cix-acl.org][acl]] :: Access control list utilities
@@ -101,9 +101,9 @@ on *GNU/Linux*
   + [[./spices/cix-curlftpfs.org][CurlFtpFS]] :: is a fs for accessing FTP hosts based on FUSE and libcurl
   + [[./spices/cix-e2fsprogs.org][E2fsprogs]] :: Filesystem utilities for use with Ext2/3/4.
   + [[./spices/cix-lvm2.org][lvm2]] :: Userland logical volume management tools
+  + [[./spices/cix-nfs-kernel-server.org][nfs-kernel-server]] ::
   + [[./spices/cix-nfs-utils.org][nfs-utils]] :: supporting clients and daemons for the kernel NFS server
   + [[./spices/cix-linux_diskquota.org][quota]] :: System tools for monitoring users disk usage
-  + [[./spices/cix-nfs-kernel-server.org][nfs-kernel-server]] ::
 
 - *Utillities* /Be silent and help ppls/
   + [[./spices/cix-gnu-binutils.org][gnu-binutils]] :: collection of binary tools
@@ -122,10 +122,6 @@ on *GNU/Linux*
   + [[./spices/cix-smartmontools.org][smartmontools]] :: Tools for monitoring SMART capable hard disks
   + [[./spices/cix-dmidecode.org][dmidecode]] :: Tool to analyse BIOS DMI data
   + [[./spices/cix-usbutils.org][usbutils]] :: Linux USB utilities
-
-- *Scheduling* /World spinning around/
-  + [[./spices/cix-at.org][at]] :: Job spooling tools
-  + [[./spices/cix-cronie.org][cronie]]  :: Cron daemon for executing programs at set times
 
 - *Searching* /Loosing my religion/
   + [[./spices/cix-gnu-grep.org][gnu-grep]] :: Pattern matching utilities
@@ -146,6 +142,7 @@ on *GNU/Linux*
 - *Networking* /We all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying DNS name server
   + [[./spices/cix-bridge_utils.org][bridge-utils]] :: Utilities for configuring the linux ethernet bridge
+  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers.
   + [[./spices/cix-gnu-inetutils.org][gnu-inetutils]] :: A collection of common network programs
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
   + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities
@@ -154,12 +151,9 @@ on *GNU/Linux*
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
   + [[./spices/cix-nmap.org][nmap]] :: Network exploration tool and security scanner
   + [[./spices/cix-openssh.org][OpenSSH]] :: An open source implementation of SSH protocol versions 1 and 2
+  + [[file:./cix-rsync.org][rsync]] :: A program for synchronizing files over a network
   + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network
-  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers.
   + [[file:./cix-wget.org][wget]] :: A utility for retrieving files using the HTTP or FTP protocols
-
-- *Packaging* /Pack me up, pack me down/
-  + [[./spices/cix-packet-managers.org][Package managers utils]] :: PM comparison table and tricks.
 
 - *Shell* /Not just sand.../
   + [[./spices/cix-gnu-bash-builtin.org][gnu-bash-builtin]] :: GNU Bash shell built in commands
@@ -168,13 +162,25 @@ on *GNU/Linux*
   + [[./spices/cix-tmux.org][tmux]] :: A terminal multiplexer
   + [[./spices/cix-zsh.org/][zsh]] ::  Powerful interactive shell
 
+- *Scheduling* /World spinning around/
+  + [[./spices/cix-at.org][at]] :: Job spooling tools
+  + [[./spices/cix-cronie.org][cronie]]  :: Cron daemon for executing programs at set times
+
 - *Media* /Pleas your eyes and ears/
   + [[file:./spices/cix-fontconfig.org][fontconfig]] :: Font configuration and customization library
   + [[./spices/cix-ffmpeg.org][ffmpeg]] :: Digital VCR and streaming server
   + [[file:./spices/cix-pulseaudio-utils.org][pulseaudio-utils]] :: PulseAudio sound server utilities
 
+- *Security* /It's never be save/
+  + pam :: An extensible library which provides authentication for applications
+  + [[file:./spices/cix-libselinux-utils.org][libselinux-utils]] :: SELinux libselinux utilies
+  + [[file:./cix-sudo.org][sudo]] :: Allows restricted root access for specified users
+
 - *Development* /In the fields of observation chance favors only the prepared mind./
   + [[./spices/cix-glibc-common.org][glibc-common]] :: Common binaries and locale data for glibc
+
+- *Packaging* /Pack me up, pack me down/
+  + [[./spices/cix-packet-managers.org][Package managers utils]] :: PM comparison table and tricks.
 
 - *Research* /I've got a clue!/
   + [[./spices/cix-netkit.org][Linux Netkit]] :: Utilities for managing processes on your system
@@ -184,10 +190,6 @@ on *GNU/Linux*
 
 - *Cryptograpy* /Who break Enigma code?/
   + [[./spices/cix-gpg.org][gnupg]] :: A GNU utility for secure communication and data storage
-
-- *Security* /It's never be save/
-  + pam :: An extensible library which provides authentication for applications
-  + [[file:./spices/cix-libselinux-utils.org][libselinux-utils]] :: SELinux libselinux utilies
 -----
 * Glosary
 - DMI ::
@@ -208,6 +210,9 @@ on *GNU/Linux*
   *UNIX in a Nutshell*;
   O'reilly, 2008;
 
+** Articles
+- M. Douglas McIlroy;
+  *A Research UNIX Reader: Annotated Excerpts from the Programmer’s Manual, 1971-1986*;
 ** Links
 - GNU Coreutils http://www.gnu.org/software/coreutils/manual/coreutils.html
 - Basics of the Unix Philosophy http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
