--- a/spices/cix-wget.org
+++ b/spices/cix-wget.org
@@ -1,6 +1,6 @@
 # File           : cix-wget.org
 # Created        : <2016-11-21 Mon 21:11:14 GMT>
-# Last Modified  : <2016-11-21 Mon 21:32:08 GMT> sharlatan
+# Last Modified  : <2016-11-21 Mon 22:00:35 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -31,10 +31,12 @@ support for Proxy servers, and configurability.
 
   URL="https://dumps.wikimedia.org/other/pageviews/2016/2016-01/"
   REGEX="(?<=\<a href\=\").+(?=\"\>)"
+
   declare -a FILE_NAMES
+  FILE_NAMES=($(curl -s "$URL" | grep -oP "$REGEX"))
 
-  FILE_NAMES=($(curl -s "$URL"| grep -oP "$REGEX"))
-
-  echo "File ${FILE_NAMES[2]} will be downloaded."
   wget "$URL${FILE_NAMES[2]}"
 #+END_SRC
+declare,
+curl (1),
+[[file:./cix-gnu-grep.org::*grep][grep (1)]]
