--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File          : cix-main.org
 # Created       : Sat 07 Nov 2015 22:58:38
-# Last Modified : <2016-11-25 Fri 00:44:36 GMT> sharlatan
+# Last Modified : <2016-11-26 Sat 21:35:06 GMT> sharlatan
 # Maintainer    : sharlatan <sharlatanus@gmail.com>
 # Short         :
 
@@ -17,26 +17,26 @@ one place.
 
 Man pages common sections.
 
-| Allover | Linux | Solaris | HP-UX | AIX |                                    |
-|---------+-------+---------+-------+-----+------------------------------------|
-|       0 |       |         |       |     | Header files                       |
-|      0p |       |         |       |     | Header files (POSIX)               |
-|       1 |     1 |       1 |     1 |   1 | General commands                   |
-|      1p |       |         |       |     | General commands (POSIX)           |
-|       2 |     2 |       2 |     2 |   2 | Systems calls                      |
-|       3 |     3 |       3 |     3 |   3 | C library functions                |
-|      3n |       |         |       |     | Network Functions                  |
-|      3p |       |         |       |     | Perl Modules                       |
-|       4 |     4 |       7 |     7 |   4 | Special files                      |
-|       5 |     5 |       4 |     4 |   5 | File formats and conventions       |
-|       6 |     6 |       6 |     - |   6 | Games and Screen savers            |
-|       7 |     7 |       5 |     5 |   7 | Miscellaneous                      |
-|       8 |     8 |      1m |    1m |   8 | Sys commmands, only root commands  |
-|       9 |     9 |       9 |     - |   - | Oscure kernel specs and interfaces |
-|       l |       |         |       |     | Local documentation                |
-|       n |       |         |       |     | New manpages                       |
-|         |     - |       - |     9 |   - | HP-UX general information          |
-|---------+-------+---------+-------+-----+------------------------------------|
+| Allover | Linux | Solaris | BSD | HP-UX | AIX |                                    |
+|---------+-------+---------+-----+-------+-----+------------------------------------|
+|       0 |       |         |     |       |     | Header f                           |
+|      0p |       |         |     |       |     | Header f (POSIX)                   |
+|       1 |     1 |       1 |     |     1 |   1 | General cmm                        |
+|      1p |       |         |     |       |     | General cmm (POSIX)                |
+|       2 |     2 |       2 |     |     2 |   2 | Systems calls                      |
+|       3 |     3 |       3 |     |     3 |   3 | C lib fun                          |
+|      3n |       |         |     |       |     | Network fun                        |
+|      3p |       |         |     |       |     | Perl mod                           |
+|       4 |     4 |       7 |     |     7 |   4 | Special f                          |
+|       5 |     5 |       4 |     |     4 |   5 | F formats and conventions          |
+|       6 |     6 |       6 |     |     - |   6 | Games and Screen savers            |
+|       7 |     7 |       5 |     |     5 |   7 | misc                               |
+|       8 |     8 |      1m |     |    1m |   8 | Sys cmd, only root cmd             |
+|       9 |     9 |       9 |     |     - |   - | Oscure kernel specs and interfaces |
+|       l |       |         |     |       |     | Local documentation                |
+|       n |       |         |     |       |     | New manpages                       |
+|         |     - |       - |     |     9 |   - | HP-UX general information          |
+|---------+-------+---------+-----+-------+-----+------------------------------------|
 
 ** Basic
 For example, you know the command but not sure about package where it goes from
@@ -81,8 +81,7 @@ on *GNU/Linux*
   + [[./spices/cix-gnu-core-utilities.org][gnu-core-utilities]] :: basic file, shell and text manipulation utilities
   + [[./spices/cix-man-db.org][man-db]] :: Tools for searching and reading man pages
   + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system
-  + The Heirloom Project :: traditional implementations of standard Unix
-       utilities.
+  + The Heirloom Project :: traditional implementations of standard UNIX utils
 
 - *File* /Everything is a file/!
   + [[file:./spices/cix-diffutils.org][diffutils]] :: A GNU collection of diff utilities
@@ -95,21 +94,29 @@ on *GNU/Linux*
   + [[./spices/cix-sed.org][sed]] :: A GNU stream text editor
   + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim
 
+- *Transfare-sync* /Put me up, put me down/
+  + lsyncd :: File change monitoring and synchronization daemon
+  + [[file:./cix-rsync.org][rsync]] :: A program for synchronizing files over a network
+  + vftp :: Very Secure Ftp Daemon
+  + [[file:./cix-wget.org][wget]] :: A utility for retrieving files using the HTTP or FTP protocols
+
 - *Filesystem* /Partition file system craft and check/
   + [[./spices/cix-acl.org][acl]] :: Access control list utilities
   + [[./spices/cix-autofs.org][autofs]] :: A tool for automatically mounting and unmounting filesystems
+  + bindf :: Fuse filesystem to mirror a directory
   + [[./spices/cix-btrfs-progs.org][btrfs-progs]] :: Userspace programs for btrfs.
   + [[./spices/cix-curlftpfs.org][CurlFtpFS]] :: is a fs for accessing FTP hosts based on FUSE and libcurl
-  + [[./spices/cix-e2fsprogs.org][E2fsprogs]] :: Filesystem utilities for use with Ext2/3/4.
+  + [[./spices/cix-e2fsprogs.org][E2fsprogs]] :: Filesystem utilities for use with Ext2/3/4
   + [[./spices/cix-lvm2.org][lvm2]] :: Userland logical volume management tools
   + [[./spices/cix-nfs-kernel-server.org][nfs-kernel-server]] ::
   + [[./spices/cix-nfs-utils.org][nfs-utils]] :: supporting clients and daemons for the kernel NFS server
   + [[./spices/cix-linux_diskquota.org][quota]] :: System tools for monitoring users disk usage
+  + glusterfs :: Distributed File System
 
 - *Utillities* /Be silent and help ppls/
   + [[./spices/cix-gnu-binutils.org][gnu-binutils]] :: collection of binary tools
-  + [[./spices/cix-moreutils.org][moreutils]] :: tools that nobody thought to write when UNIX was young.
-  + [[file:./spices/cix-parallel.org][parallel]] :: Shell tool for executing jobs in parallel.
+  + [[./spices/cix-moreutils.org][moreutils]] :: tools that nobody thought to write when UNIX was young
+  + [[file:./spices/cix-parallel.org][parallel]] :: Shell tool for executing jobs in parallel
   + [[file:./spices/cix-parted.org][parted]] :: The GNU disk partition manipulation program
   + [[./spices/cix-pm-utils.org][pm-utils]] :: suspend and powerstate setting framework
   + [[./spices/cix-procps-ng.org][procps-ng]] :: utilities for monitoring your system and its processes
@@ -143,7 +150,7 @@ on *GNU/Linux*
 - *Networking* /We all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying DNS name server
   + [[./spices/cix-bridge_utils.org][bridge-utils]] :: Utilities for configuring the linux ethernet bridge
-  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers.
+  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers
   + [[./spices/cix-gnu-inetutils.org][gnu-inetutils]] :: A collection of common network programs
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
   + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities
@@ -152,9 +159,7 @@ on *GNU/Linux*
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
   + [[./spices/cix-nmap.org][nmap]] :: Network exploration tool and security scanner
   + [[./spices/cix-openssh.org][OpenSSH]] :: An open source implementation of SSH protocol versions 1 and 2
-  + [[file:./cix-rsync.org][rsync]] :: A program for synchronizing files over a network
   + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network
-  + [[file:./cix-wget.org][wget]] :: A utility for retrieving files using the HTTP or FTP protocols
 
 - *Shell* /Not just sand.../
   + [[./spices/cix-gnu-bash-builtin.org][gnu-bash-builtin]] :: GNU Bash shell built in commands
@@ -183,12 +188,12 @@ on *GNU/Linux*
   + [[./spices/cix-glibc-common.org][glibc-common]] :: Common binaries and locale data for glibc
 
 - *Packaging* /Pack me up, pack me down/
-  + [[./spices/cix-packet-managers.org][Package managers utils]] :: PM comparison table and tricks.
+  + [[./spices/cix-packet-managers.org][Package managers utils]] :: PM comparison table and tricks
 
 - *Research* /I've got a clue!/
   + [[./spices/cix-netkit.org][Linux Netkit]] :: Utilities for managing processes on your system
 
-- *Kernel* /Got to basic/
+- *Kernel* /Go to basic/
   + [[./spices/cix-kmod.org][kmod]] :: Linux kernel module management utilities
 
 - *Cryptograpy* /Who break Enigma code?/
@@ -201,6 +206,7 @@ on *GNU/Linux*
 - restricted delition flag :: prevents unprivileged users from removing or
      renaming a file in the directory unless they own the file or the directory
 - inode ::
+- RFC :: [[https://www.rfc-editor.org/retrieve/][Request for Comment]] - official standards in the internet community.
 - MBR ::
 * References
 ** Books
